--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,14 @@
       {
         "image-alt": "off"
       }
+    ],
+    "no-inline-styles": "off",
+    "typescript-config/strict": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
