--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,12 @@
       {
         "button-name": "off"
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
     ]
   }
 }
