--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^12.0.0",
     "ngx-pagination": "^6.0.3",
+    "nodemailer": "^6.9.13",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
