--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "compression": "^1.7.4",
+    "icons": "^1.0.0",
     "jquery": "^3.7.1",
+    "matter": "^0.2.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-slick-carousel": "^17.0.0",
