--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "compression": "^1.7.4",
@@ -32,6 +33,7 @@
     "ngx-pagination": "^6.0.3",
     "ngx-slick-carousel": "^17.0.0",
     "nodemailer": "^6.9.13",
+    "popper": "^1.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
