--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
+    "@angular/animations": "^17.3.3",
     "@angular/cdk": "^17.3.1",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -32,6 +32,7 @@
     "ngx-bootstrap": "^12.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-slick-carousel": "^17.0.0",
+    "ngx-toastr": "^18.0.0",
     "nodemailer": "^6.9.13",
     "popper": "^1.0.1",
     "rxjs": "~7.8.0",
