--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "popper": "^1.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.7",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
